--- a/app/src/main/res/values/theme.xml
+++ b/app/src/main/res/values/theme.xml
@@ -36,6 +36,7 @@
 	<item name="android:textColor">#EEEEEE</item>
 	<item name="android:textStyle">bold</item>
 	<item name="android:textSize">16sp</item>
+	<item name="android:padding">5dip</item>
 </style>
 <style name="Widget.Button.Toggle" parent="android:Widget"> 
    <item name="android:background">@drawable/ic_toggle_airport_bg</item> 
