--- a/app/src/main/res/layout/editaircraft.xml
+++ b/app/src/main/res/layout/editaircraft.xml
@@ -60,70 +60,63 @@
 		</Gallery>
 		
 		<!-- Aircraft Preferences -->
-		<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center_vertical" android:padding="5dp">
-			<TextView android:id="@+id/acPrefsHeader" android:text="@string/lblAircraftPrefsHeader"
-				style="@style/DividerBar">
-			</TextView>
-			<RadioGroup android:id="@+id/rbgPilotRole" android:layout_width="wrap_content" android:layout_height="wrap_content">
-				<RadioButton
-				    android:id="@+id/rbRoleNone"
-				    android:layout_width="wrap_content"
-				    android:layout_height="wrap_content"
-				    android:text="@string/lblRoleNone" />
-				<RadioButton
-				    android:id="@+id/rbRolePIC"
-				    android:layout_width="wrap_content"
-				    android:layout_height="wrap_content"
-				    android:text="@string/lblRolePIC" />
-				<RadioButton
-				    android:id="@+id/rbRoleSIC"
-				    android:layout_width="wrap_content"
-				    android:layout_height="wrap_content"
-				    android:text="@string/lblRoleSIC" />
-				<RadioButton
-				    android:id="@+id/rbRoleCFI"
-				    android:layout_width="wrap_content"
-				    android:layout_height="wrap_content"
-				    android:text="@string/lblRoleCFI" />
-			</RadioGroup>
-		</LinearLayout>
-		
+		<TextView android:id="@+id/acPrefsHeader" android:text="@string/lblAircraftPrefsHeader" android:drawableStart="@drawable/collapse_light" android:clickable="true"
+			style="@style/DividerBar">
+		</TextView>
+		<RadioGroup android:id="@+id/rbgPilotRole" android:layout_width="wrap_content" android:layout_height="wrap_content">
+			<RadioButton
+				android:id="@+id/rbRoleNone"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="@string/lblRoleNone" />
+			<RadioButton
+				android:id="@+id/rbRolePIC"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="@string/lblRolePIC" />
+			<RadioButton
+				android:id="@+id/rbRoleSIC"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="@string/lblRoleSIC" />
+			<RadioButton
+				android:id="@+id/rbRoleCFI"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="@string/lblRoleCFI" />
+		</RadioGroup>
+
 		<!-- Notes -->
-		<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center_vertical" android:padding="5dp">
-			<TextView android:id="@+id/acNotesHeader" android:text="@string/lblNotesHeader"
-				style="@style/DividerBar">
+		<TextView android:id="@+id/acNotesHeader" android:text="@string/lblNotesHeader" android:clickable="true" android:drawableStart="@drawable/collapse_light"
+			style="@style/DividerBar">
+		</TextView>
+		<TableLayout android:stretchColumns="1" android:id="@+id/sectACNotes" android:padding="5dp" android:layout_width="fill_parent" android:layout_height="wrap_content">
+			<TableRow android:id="@+id/TableRowPublicNotes" android:layout_height="wrap_content" android:layout_width="fill_parent">
+			<TextView android:text="@string/lblPublicNotes"
+				android:layout_height="wrap_content" android:layout_width="wrap_content"
+				android:layout_gravity="center_vertical">
 			</TextView>
-			<TableLayout android:stretchColumns="1" android:padding="5dp" android:layout_width="fill_parent" android:layout_height="wrap_content">
-			    <TableRow android:id="@+id/TableRowPublicNotes" android:layout_height="wrap_content" android:layout_width="fill_parent">
-				<TextView android:text="@string/lblPublicNotes"
-					android:layout_height="wrap_content" android:layout_width="wrap_content"
-					android:layout_gravity="center_vertical">
-				</TextView>
-				<EditText android:id="@+id/txtPublicAircraftNotes"
-				    android:inputType="textCapSentences|textAutoCorrect"
-				     android:hint="@string/lblPublicNoteHint" android:layout_height="wrap_content" android:layout_width="fill_parent"></EditText>
-		    </TableRow>
-			<TableRow android:id="@+id/TableRowPrivateNotes" android:layout_height="wrap_content" android:layout_width="fill_parent">
-				<TextView android:text="@string/lblPrivateNotes"
-					android:layout_height="wrap_content" android:layout_width="wrap_content"
-					android:layout_gravity="center_vertical">
-				</TextView>
-				<EditText android:id="@+id/txtPrivateAircraftNotes"
-				    android:inputType="textCapSentences|textAutoCorrect"
-				     android:hint="@string/lblPrivateNoteHint" android:layout_height="wrap_content" android:layout_width="fill_parent"></EditText>
-		    </TableRow>
-   			</TableLayout>
-		</LinearLayout>
-		
+			<EditText android:id="@+id/txtPublicAircraftNotes"
+				android:inputType="textCapSentences|textAutoCorrect"
+				 android:hint="@string/lblPublicNoteHint" android:layout_height="wrap_content" android:layout_width="fill_parent"></EditText>
+		</TableRow>
+		<TableRow android:id="@+id/TableRowPrivateNotes" android:layout_height="wrap_content" android:layout_width="fill_parent">
+			<TextView android:text="@string/lblPrivateNotes"
+				android:layout_height="wrap_content" android:layout_width="wrap_content"
+				android:layout_gravity="center_vertical">
+			</TextView>
+			<EditText android:id="@+id/txtPrivateAircraftNotes"
+				android:inputType="textCapSentences|textAutoCorrect"
+				 android:hint="@string/lblPrivateNoteHint" android:layout_height="wrap_content" android:layout_width="fill_parent"></EditText>
+		</TableRow>
+		</TableLayout>
+
 		<!-- Maintenance -->
 		<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/sectMaintenance" android:orientation="vertical">
-			<TextView android:id="@+id/TextView02" android:text="@string/lblCatMaintenance"
+			<TextView android:id="@+id/txtACMaintenance" android:text="@string/lblCatMaintenance" android:clickable="true" android:drawableStart="@drawable/collapse_light"
 				style="@style/DividerBar">
 			</TextView>
-			<TextView android:text="@string/lblMaintPrompt"
-				android:layout_width="fill_parent" android:layout_height="wrap_content">
-			</TextView>
-			<TableLayout android:padding="5dp"
+			<TableLayout android:padding="5dp" android:id="@+id/sectACMaintenance"
 				android:layout_width="fill_parent"
 				android:layout_height="wrap_content">
 				<TableRow android:id="@+id/TableRow02"
