--- a/app/src/main/res/layout/currency.xml
+++ b/app/src/main/res/layout/currency.xml
@@ -7,10 +7,12 @@ android:layout_height="fill_parent">
 		<TextView android:id="@+id/lnkCurrencyDisclaimer" android:layout_width="fill_parent"
 		    android:layout_margin="4dp"
 	    	android:gravity="center"
+			android:clickable="true"
+			android:text="@string/CurrencyDisclaimer"
 	    	android:textStyle="bold"
 	    	android:padding="5dip"
 	    	android:background="@color/table_background" 
-		    android:layout_height="wrap_content"></TextView>
+		    android:layout_height="wrap_content" />
 		<TableLayout
 		android:id="@+id/tblCurrency" 
 		android:layout_width="fill_parent" 
