--- a/app/src/main/res/layout/newaircraft.xml
+++ b/app/src/main/res/layout/newaircraft.xml
@@ -11,7 +11,7 @@
 			<TableRow android:id="@+id/tblrowAircraftInstanceType" android:layout_width="fill_parent" android:gravity="center_vertical"
 				android:layout_height="wrap_content">
 				<TextView android:text="@string/lblAircraftType" android:id="@+id/TextView02"
-					android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+					android:layout_width="wrap_content" android:layout_height="wrap_content" />
 				<Spinner android:layout_width="wrap_content" android:paddingTop="2sp" android:paddingBottom="2sp"
 					android:layout_height="wrap_content" android:id="@+id/spnAircraftType"></Spinner>
 			</TableRow>
