--- a/app/src/main/res/layout/currencyrow.xml
+++ b/app/src/main/res/layout/currencyrow.xml
@@ -1,16 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent" android:layout_height="fill_parent" android:padding="5dp">
-	<TextView android:text="" android:id="@+id/txtCsiAttribute"
-		android:layout_width="0px" android:layout_weight="5" android:layout_height="wrap_content"
-		android:textSize="8pt">
-	</TextView>
-	<LinearLayout android:id="@+id/LinearLayout01"
-		android:layout_width="0px" android:layout_weight="5" android:layout_height="wrap_content"
-		android:orientation="vertical">
-		<TextView android:text="" android:id="@+id/txtCsiValue"
-			android:layout_width="fill_parent" android:layout_height="wrap_content" android:textSize="6pt"></TextView>
-		<TextView android:text="" android:id="@+id/txtCsiDiscrepancy"
-			android:layout_width="fill_parent" android:layout_height="wrap_content" android:textSize="6pt"></TextView>
-	</LinearLayout>
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:padding="5dp">
+
+    <TextView
+        android:id="@+id/txtCsiAttribute"
+        android:layout_width="0px"
+        android:layout_height="wrap_content"
+        android:layout_weight="5"
+        android:text=""
+        android:textSize="8pt" />
+
+    <LinearLayout
+        android:id="@+id/LinearLayout01"
+        android:layout_width="0px"
+        android:layout_height="wrap_content"
+        android:layout_weight="5"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/txtCsiValue"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="6pt" />
+
+        <TextView
+            android:id="@+id/txtCsiDiscrepancy"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="6pt" />
+    </LinearLayout>
 </TableRow>
