--- a/app/src/main/res/layout/dlgaddcomment.xml
+++ b/app/src/main/res/layout/dlgaddcomment.xml
@@ -1,24 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent" android:layout_height="fill_parent"
-	android:orientation="vertical" android:layout_gravity="center_horizontal"
-	android:gravity="center_horizontal">
-	<TextView android:id="@+id/textView1" android:layout_width="wrap_content"
-		android:layout_height="wrap_content" android:text="@string/lblAddComment"></TextView>
-	<EditText android:text="" android:layout_height="wrap_content"
-		android:id="@+id/txtComment" android:hint="@string/lblAddCommentWM"
-		android:inputType="textCapSentences|textAutoCorrect|textAutoComplete"
-		android:layout_width="250dp"></EditText>
-	<ImageView android:layout_height="wrap_content" android:contentDescription="@string/cdImagesForFlight"
-		android:layout_width="wrap_content" android:id="@+id/imgPreview"></ImageView>
-	<LinearLayout android:layout_height="wrap_content"
-		android:layout_width="fill_parent" android:id="@+id/linearLayout1"
-		android:gravity="center_horizontal">
-		<Button android:layout_height="wrap_content"
-			android:layout_width="wrap_content" android:id="@+id/btnCancel"
-			android:text="@string/lblCancel" android:width="120dp"></Button>
-		<Button android:layout_height="wrap_content"
-			android:layout_width="wrap_content" android:id="@+id/btnOK"
-			android:text="@string/lblOK" android:width="120dp" android:textStyle="bold"></Button>
-	</LinearLayout>
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_gravity="center_horizontal"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lblAddComment" />
+
+    <EditText
+        android:id="@+id/txtComment"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/lblAddCommentWM"
+        android:inputType="textCapSentences|textAutoCorrect|textAutoComplete"
+        android:text="" />
+
+    <ImageView
+        android:id="@+id/imgPreview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/cdImagesForFlight" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal">
+
+        <Button
+            android:id="@+id/btnCancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:width="120dp"
+            android:text="@string/lblCancel" />
+
+        <Button
+            android:id="@+id/btnOK"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:width="120dp"
+            android:text="@string/lblOK"
+            android:textStyle="bold" />
+    </LinearLayout>
 </LinearLayout>
