--- a/app/src/main/res/values/theme.xml
+++ b/app/src/main/res/values/theme.xml
@@ -31,8 +31,8 @@
 	<item name="android:background">@color/divider_background</item>
 	<item name="android:layout_height">wrap_content</item>
 	<item name="android:layout_width">fill_parent</item>
-	<item name="android:layout_gravity">center_horizontal</item>
-	<item name="android:gravity">center_horizontal</item>
+	<item name="android:layout_gravity">center_horizontal|center_vertical</item>
+	<item name="android:gravity">center_horizontal|center_vertical</item>
 	<item name="android:textColor">#EEEEEE</item>
 	<item name="android:textStyle">bold</item>
 	<item name="android:textSize">16sp</item>
