--- a/app/src/main/res/layout/editaircraft.xml
+++ b/app/src/main/res/layout/editaircraft.xml
@@ -87,11 +87,22 @@
             android:text="@string/lblShowAircraft" />
 
         <!-- Images -->
-        <Gallery
-            android:id="@+id/galImages"
-            android:layout_width="fill_parent"
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:spacing="4dip" />
+            style="@style/DividerBar"
+            android:clickable="true"
+            android:text="@string/cdImagesForAircraft"
+            android:drawableStart="@drawable/collapse_light"
+            android:id="@+id/txtImageHeader"/>
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/table_background"
+            android:padding="4dp"
+            android:stretchColumns="0,1"
+            android:id="@+id/tblImageTable"/>
 
         <!-- Aircraft Preferences -->
         <TextView
