--- a/app/src/main/res/layout/newaircraft.xml
+++ b/app/src/main/res/layout/newaircraft.xml
@@ -109,15 +109,12 @@
             android:layout_height="wrap_content"
             android:text="@string/lblAddMakes" />
         <!-- Images -->
-        <Gallery
-            android:id="@+id/galImages"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:spacing="4dip" />
-        <LinearLayout
+        <TableLayout
             android:layout_width="match_parent"
-            android:id="@+id/layoutImages"
-            android:orientation="vertical"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:background="@color/table_background"
+            android:padding="4dp"
+            android:stretchColumns="0,1"
+            android:id="@+id/tblImageTable"/>
     </LinearLayout>
 </ScrollView>
